# Search_Engine

./: CMakeLists.txt  LICENSE  README.md  config.json  main.cpp  main_tests.cpp  requests.json
include/: converterjson.h  exceptions.h  invertedindex.h  lowercasemaker.h  searchserver.h
src/: converterjson.cpp  invertedindex.cpp  searchserver.cpp
